--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
-    "name": "native-js",
-    "version": "1.0.5",
-    "main": "index.js",
-    "description": "Native Helper for Javascript",
-    "readme": "readme.md",
-
-    "keywords": [
-        "native",
-        "javascript",
-        "native js",
-        "javascript helper"
-    ],
-
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/mahdaen/native-js.git"
-    },
-
-    "dependencies": {
-        "grunt": "*",
-        "grunt-contrib-concat": "*",
-        "grunt-contrib-uglify": "*",
-        "grunt-contrib-watch": "*"
-    },
-
-    "license": "MIT",
-
-    "authors": [
-        {
-            "name": "Nanang Mahdaen El Agung",
-            "email": "mahdaen@gmail.com"
-        }
-    ],
-
-    "devDependencies": {
-        "jasmine-core": "^2.1.3",
-        "karma": "^0.12.28",
-        "karma-chrome-launcher": "^0.1.7",
-        "karma-firefox-launcher": "^0.1.3",
-        "karma-jasmine": "^0.3.2",
-        "karma-opera-launcher": "^0.1.0",
-        "karma-safari-launcher": "^0.1.1"
+  "name": "native-js",
+  "version": "1.1.0",
+  "main": "index.js",
+  "description": "Native Helper for Javascript",
+  "keywords": [
+    "native",
+    "javascript",
+    "native js",
+    "javascript helper"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mahdaen/native-js.git"
+  },
+  "dependencies": {
+    "grunt": "*",
+    "grunt-apidoc": "^0.10.0",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Nanang Mahdaen El Agung",
+      "email": "mahdaen@gmail.com"
     }
+  ],
+  "devDependencies": {
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.3.2",
+    "karma-opera-launcher": "^0.1.0",
+    "karma-safari-launcher": "^0.1.1"
+  }
 }
