--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "native-js",
-  "version": "1.1.5",
-  "description": "Native Helper for Javascript",
-  "keywords": [
-    "native",
-    "javascript",
-    "native js",
-    "javascript helper"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mahdaen/native-js.git"
-  },
-  "dependencies": {
-    "grunt": "*",
-    "grunt-apidoc": "^0.10.0",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*"
-  },
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Nanang Mahdaen El Agung",
-      "email": "mahdaen@gmail.com"
+    "name": "native-js",
+    "version": "1.2.0",
+    "description": "Native Helper for Javascript",
+    "main": "dist/nativejs.clean.js",
+    "keywords": [
+        "native",
+        "javascript",
+        "native js",
+        "javascript helper"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mahdaen/native-js.git"
+    },
+    "dependencies": {
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Nanang Mahdaen El Agung",
+            "email": "mahdaen@gmail.com"
+        }
+    ],
+    "devDependencies": {
+        "grunt": "*",
+        "grunt-apidoc": "^0.10.0",
+        "grunt-contrib-concat": "*",
+        "grunt-contrib-uglify": "*",
+        "grunt-contrib-watch": "*"
     }
-  ],
-  "devDependencies": {
-    "jasmine-core": "^2.1.3",
-    "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.3.2",
-    "karma-opera-launcher": "^0.1.0",
-    "karma-safari-launcher": "^0.1.1"
-  }
 }
